--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 category_encoders==2.3.0
 pandas==1.3.4
 numpy==1.21.4
-scikit-learn~=1.0.1
-joblib~=1.1.0
+scikit-learn==0.23.1
+beautifulsoup4==4.10.0
+bs4==0.0.1
+matplotlib==3.5.0
+requests==2.26.0
